GIE/vllm-cpu-release-deepseek.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-server
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: vllm
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: vllm
    spec:
      containers:
      - args:
        - vllm serve deepseek-ai/DeepSeek-R1
        # vllm serve MiniMaxAI/MiniMax-M1-80k --trust-remote-code
        command:
        - /bin/sh
        - -c
        image: public.ecr.aws/q9t5s3a7/vllm-cpu-release-repo:v0.9.0
        imagePullPolicy: Always
        name: vllm
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /root/.cache/huggingface
          name: llama-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: llama-storage
        persistentVolumeClaim:
          claimName: vllm-models
