GIE/vllm-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-inference-route
  namespace: default
spec:
  parentRefs:
  - name: inference-gateway
    namespace: openshift-ingress
  hostnames:
  - "vllm.gie.hongli-aw421.qe.devcluster.openshift.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1/completions
    backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: vllm-pool
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /v1/chat/completions
    backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: vllm-pool
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /v1/models
    backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: vllm-pool
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /health
    backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: vllm-pool
      port: 8000
